--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,6 +6,9 @@ date: 2023-12-09
 
 # ISTANA SLOT
 
+[![daftar istanaslot](https://ik.imagekit.io/iss/daftar.gif "daftar istanaslot")](https://iss777.us/iss)
+
+
 ![istanaslot!](https://ik.imagekit.io/iss/situs-istana.jpg "istanaslot")
 
 ISTANASLOT, sebagai pelopor situs judi online terpercaya, senantiasa memberikan pengalaman berjudi yang tak terlupakan. Bagi para pecinta judi online, kini hadir link alternatif resmi ISTANASLOT, membuka pintu ke dunia judi tanpa batas.
