--- a/pages/photos.mdx
+++ b/pages/photos.mdx
@@ -1,7 +1,7 @@
 ---
 type: page
 title: Photos
-date: 2021-03-18
+date: 2023-12-31
 ---
 
 # Photos
@@ -11,14 +11,14 @@ Here's some of my photography.
 import Image from 'next/image'
 
 <Image
-  src="/images/photo2.jpg"
+  src="https://iss99.com/assets/img/iss/istana-slot-logo.png"
   alt="Photo"
   width={1125}
   height={750}
   priority
   className="next-image"
 />
-[Unsplash ↗ ](https://unsplash.com/photos/WeYamle9fDM)
+[ISTANASLOT ↗ ](https://iss99.com/assets/img/iss/istana-slot-logo.png)
 
 <Image
   src="/images/photo.jpg"
