--- a/pages/photos.mdx
+++ b/pages/photos.mdx
@@ -12,7 +12,7 @@ import Image from 'next/image'
 
 <Image
   src="https://iss99.com/assets/img/iss/istana-slot-logo.png"
-  alt="Photo"
+  alt="istanaslot"
   width={1125}
   height={750}
   priority
