--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,10 +6,10 @@ date: 2023-12-09
 
 # ISTANA SLOT
 
-[![daftar istanaslot](https://ik.imagekit.io/iss/daftar.gif "daftar istanaslot")](https://iss777.us/iss)
+[![daftar istanaslot](https://iss99.com/assets/img/iss/button-daftar.webp "daftar istanaslot")](https://is7.xyz/istanaslot)
 
 
-![istanaslot!](https://ik.imagekit.io/iss/situs-istana.jpg "istanaslot")
+![istanaslot!](https://iss99.com/assets/img/iss/situs-istana.webp "istanaslot")
 
 ISTANASLOT, sebagai pelopor situs judi online terpercaya, senantiasa memberikan pengalaman berjudi yang tak terlupakan. Bagi para pecinta judi online, kini hadir link alternatif resmi ISTANASLOT, membuka pintu ke dunia judi tanpa batas.
 
@@ -25,12 +25,12 @@ Pemain adalah prioritas utama ISTANASLOT. Dukungan pelanggan 24/7 melalui Facebo
 
 
 Beberapa Link Alteratif Resmi dari ISTANASLOT : 
-1.[ISTANASLOT](https://istanaslot.id/)
-2.[http://165.22.255.30/](http://165.22.255.30/)
-3.[https://istana-slot.bio/](https://istana-slot.bio/)
-4.[https://istana-slot.info/](https://istana-slot.info/)
-5.[ISTANA SLOT Login & Daftar Agen Resmi Pragmatic Play](https://istana-slot.store/)
-6.[RTP ISTANASLOT](https://rtp-istanaslot.com/)
+1.[ISTANASLOT](https://istana-slot.id/)
+2.[californiaminorityalliance.com](https://www.californiaminorityalliance.com/)
+3.[https://istanaslot.shop/](https://istanaslot.shop/)
+4.[istana slot](https://bethany-hospice.com/)
+5.[sohibslot](https://sicilia.cosavedere.net/)
+
 
 ---
 
